[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = ""
authors = ["Anders Jakobsson  <ajkbssn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
